--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+body{
+  background-color: aqua;
+}
+
 .preLoaderContainer {
   height: 100vh;
   display: flex;
@@ -15,7 +19,7 @@
   border-radius: 5px;
   height: 50px;
   width: 250px;
-  background-color: white;
+  background-color: rgb(215, 19, 19);
 
   h2 {
     color: black;
