--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ body{
   border-radius: 5px;
   height: 50px;
   width: 250px;
-  background-color: rgb(215, 19, 19);
+  background-color: white;
 
   h2 {
     color: black;
